# Agentic-RAG-copilot

./: .gitignore  README.md  start_dev.cmd
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260408_0001_init_phase1.py  20260408_0002_rag_index_and_chat.py  20260408_0003_langgraph_trace.py  20260408_0004_memory_system.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: chat.py  documents.py  health.py  memory.py  runs.py  threads.py  workspaces.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  agent.py  core.py  kb.py  memory.py  mixins.py
backend/app/repositories/: __init__.py  document_repository.py  run_repository.py  thread_repository.py  workspace_repository.py
backend/app/schemas/: chat.py  documents.py  memory.py  runs.py  threads.py  workspaces.py
backend/app/scripts/: reset_local_db.py
backend/app/services/chat/: __init__.py  service.py  stream_control.py
backend/app/services/chunking/: __init__.py  service.py
backend/app/services/indexing/: __init__.py  service.py
backend/app/services/ingest/: __init__.py  pipeline.py
backend/app/services/llm/: dashscope_client.py
backend/app/services/memory/: service.py
backend/app/services/orchestration/: graph.py  state.py  tracing.py
backend/app/services/parsers/: __init__.py  base.py  docx_parser.py  (+4 more)
backend/tests/: test_chat_retry.py  test_chunking_and_retrieval.py  test_memory_service.py  test_orchestration_trace.py  test_parsers.py
(+46 files in other folders)
